--- a/back-end/WebApiJwtBearer/Properties/launchSettings.json
+++ b/back-end/WebApiJwtBearer/Properties/launchSettings.json
@@ -3,14 +3,13 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50586/",
-      "sslPort": 0
+      "applicationUrl": "https://localhost:44319/",
+      "sslPort": 44319
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
       "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
